@@ -1,6 +1,28 @@
-# The-Last-of-Us-legacy
+# The-Last-of-Us-legacy, CSEN401 project
 
-# CSEN401 project
+```
+The Last of Us: Legacy is a single player survival game set in a zombie apocalyptic world.
+The game is conducted in a turn based manner, in which each player character receives a specific number of action points per turn, which they can use to move, attack or cure zombies, or use special actions.
+
+The player starts the game controlling only one hero, but can gain additional heroes by curing zombies. The objective of the game for the player is to survive as long as it takes in order to cure a sufficient number of zombies enough to build a community to survive the apocalypse.
+
+Each hero type has a unique action they can add to the player’s team:
+
+• Explorer: Allows the player to be able to see the entirety of the map for 1 turn whenever a supply is used.
+
+• Medic: Can heal and restore health to other heroes or themselves, each process of healing uses 1 supply.
+
+• Fighter: Can attack as many times in a turn without costing action points, for 1 turn whenever a supply is used.
+```
+
+# Setup
+```
+Clone this repo
+Add this to the run configurations:
+"vmArgs": "--module-path path/to/javafx-sdk/lib/  --add-modules javafx.controls,javafx.fxml --add-modules=javafx.swing,javafx.graphics,javafx.media,javafx.web --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED”
+
+Change path/to/javafx-sdk/lib/ to the directory in which you installed javafx-sdk
+```
 
 # Team members:
 ```
